--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -22,6 +22,7 @@ button {
     justify-content: space-between;
     align-items: center;
     border: 2px solid purple;
+    border-radius: 10px;
     margin: 15px;
     padding: 15px;
 }
