learned: react-transition-group / how to animate components

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -26,3 +26,17 @@ button {
     margin: 15px;
     padding: 15px;
 }
+.post-enter {
+opacity: 0;
+}
+.post-enter-active {
+opacity: 1;
+transition: opacity 500ms ease-in;
+}
+.post-exit {
+opacity: 1;
+}
+.post-exit-active {
+opacity: 0;
+transition: opacity 500ms ease-in;
+}
