added: pages & migrated App.jsx -> to Posts.jsx / fixed: update post

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -51,6 +51,11 @@ opacity: 0;
 transition: opacity 500ms ease-in;
 }
 
+.error {
+    text-align: center;
+    margin-top: 40px;
+}
+
 .page {
     display: inline-block;
     margin: 5px;
