--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -9,12 +9,47 @@ button {
 }
 
 #root {
-    display: flex;
-    justify-content: center;
+    display: block;
 }
 
 .App {
     width: 800px;
+}
+
+header {
+    width: 100%;
+    height: 70px;
+    background-color: rgba(184, 195, 192, 0.445);
+    border-bottom: 1px solid purple;
+}
+nav {
+    display: flex;
+    justify-content: space-around;
+}
+.nav__item {
+    text-decoration: none;
+    font-size: 24px;
+    margin-top: 15px;
+}
+
+main {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.section__main {
+    margin-top: 40px;
+}
+
+footer {
+    width: 100%;
+    height: 100px;
+    margin-top: 50px;
+    background-color: rgba(184, 195, 192, 0.445);
+    border-top: 1px solid purple;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .post {
