--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -17,6 +17,7 @@ button {
 }
 
 header {
+    /* position: fixed; */
     width: 100%;
     height: 70px;
     background-color: rgba(184, 195, 192, 0.445);
@@ -33,17 +34,15 @@ nav {
 }
 
 main {
+    margin-top: 40px;
+    min-height: 1200px;
     display: flex;
     justify-content: center;
-    align-items: center;
-}
-.section__main {
-    margin-top: 40px;
 }
 
 footer {
     width: 100%;
-    height: 100px;
+    min-height: 100px;
     margin-top: 50px;
     background-color: rgba(184, 195, 192, 0.445);
     border-top: 1px solid purple;
@@ -64,12 +63,10 @@ footer {
 .post__content {
     max-width: 90%;
     padding-right: 10px;
-    /* border: 2px solid red; */
 }
 .post__btns {
     max-width: 10%;
     text-align: center;
-    /* border: 2px solid green; */
 }
 .post-enter {
 opacity: 0;
