--- a/src/styles/Register.css
+++ b/src/styles/Register.css
@@ -1,7 +1,7 @@
 .register__wrapper {
     min-width: 200px;
     max-width: 400px;
-    height: 300px;
+    height: 330px;
     border: 2px solid purple;
     padding: 20px;
     border-radius: 5px;
@@ -31,4 +31,9 @@
 }
 .register__btn:hover {
     scale: 1.01;
+}
+.register__link {
+    margin-top: 15px;
+    font-size: 14px;
+    color: gray;
 }
