added: Navbar -> user dropdown

--- a/src/components/UI/Dropdown/Dropdown.module.css
+++ b/src/components/UI/Dropdown/Dropdown.module.css
@@ -34,8 +34,11 @@
 }
 .dropdown__children * {
     width: 100%;
+    display: block;
+    text-align: center;
     cursor: pointer;
     font-size: 16px;
+    padding: 10px;
     border: 1px solid rgb(199, 194, 194);
     transition: .2s;
 }
