--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -28,11 +28,12 @@ nav {
     justify-content: space-around;
 }
 .nav__item {
+    display: block;
     text-decoration: none;
-    font-size: 24px;
-    margin-top: 15px;
+    font-size: 20px;
+    color: black;
+    background-color: #efefef;
 }
-
 main {
     margin-top: 40px;
     min-height: 600px;
