--- a/src/components/UI/Dropdown/Dropdown.module.css
+++ b/src/components/UI/Dropdown/Dropdown.module.css
@@ -1,8 +1,7 @@
 .dropdown{
-    /* border: 2px solid red; */
     width: 180px;
     display: flex;
-    position: relative;;
+    position: relative;
 }
 .dropdown__btn {
     min-width: 70px;
@@ -12,6 +11,7 @@
     border-radius: 5px;
     cursor: pointer;
     transition: .2s;
+    z-index: 1;
 }
 .dropdown__btn:hover {
     background-color: #f8f6ff;
@@ -22,6 +22,7 @@
     position: absolute;
     width: 100px;
     right: 0px;
+    z-index: 2;
 }
 .dropdown__content::after {
     content: '';
