--- a/src/components/UI/modal/MyModal.module.css
+++ b/src/components/UI/modal/MyModal.module.css
@@ -18,7 +18,7 @@
 .myModalContent {
   padding: 25px;
   background: white;
-  border: 2px solid purple;
+  border: 3px solid rgba(21, 14, 21, 0.705);
   border-radius: 16px;
   position: relative;
 }
