--- a/src/components/UI/inputs/MyInput.module.css
+++ b/src/components/UI/inputs/MyInput.module.css
@@ -1,7 +1,7 @@
 .myInput {
     margin-top: 15px;
     padding: 10px;
-    border: 1px solid purple;
+    border: 2px solid rgba(21, 14, 21, 0.705);
     border-radius: 10px;
     transition: .2s;
 }
