--- a/src/styles/Posts.css
+++ b/src/styles/Posts.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    border: 2px solid purple;
+    border: 2px solid rgba(21, 14, 21, 0.705);
     border-radius: 10px;
     margin: 15px;
     padding: 15px;
